src/test/deca/codegen/valid/test_if_int_expr.deca
// @result ok
// @result ok
{
	if (234) {
		println("ok");
	} else {
		println("ko");
	}
	
	if (0) {
		println("ko");
	} else {
		println("ok");
	}
}
